Player shifting to correct locations

--- a/public/css/stageCamera.css
+++ b/public/css/stageCamera.css
@@ -168,6 +168,14 @@
 	color: #fff;	
 }
 
+.player
+{
+	width: 40px;
+	height: 60px;
+	position: absolute;
+	background: #ff0033;
+}
+
 .blend
 {
 	width: inherit;
